--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 README for grubcfg
 
+THIS PROJECT IS NO WHERE NEAR DONE I HAVE SIMPLY MOVED ON TO OTHER THINGS
+UNTIL I HAVE TIME TO WORK ON THIS MORE ASSUME IT DOESN'T WORK
+
 This tool is designed to make changing the grub configuration much easier
 
 Run installgrubcfg to install program
